# spss_draw

./: README.md  convert_to_web.py  main.py  main_3d.py  pyproject.toml
docs/: index.html
docs/models/: models.json
docs/models/glb/: dual_flat.glb  dual_s1.2.glb  round_large_fixed.glb  spss_s1.2.glb  spss_skeleton_flat.glb  spss_skeleton_multi.glb  spss_thin.glb
docs/models/usdz/: dual_flat.usdz  dual_s1.2.usdz  round_large_fixed.usdz  spss_s1.2.usdz  spss_skeleton_flat.usdz  spss_skeleton_multi.usdz  spss_thin.usdz
model/: dual_flat.stl  dual_s1.2.stl  round_large_fixed.stl  spss_infill_engraved.stl  spss_infill_engraved_s040.stl  spss_infill_relief.stl  spss_infill_relief_s040.stl  spss_pendant_engraved.stl  spss_pendant_engraved_s040.stl  spss_pendant_relief.stl  spss_pendant_relief_s040.stl  spss_s1.2.stl  spss_skeleton_0.8.stl  spss_skeleton_flat.stl  spss_skeleton_multi.stl  spss_terrain.step  spss_thin.step  spss_thin.stl
spec/: dual_3d_plan_a.md  dual_3d_plan_a_prime.md  infill_3d.md
spss_draw/: __init__.py  bouwkamp.py  cli.py  coloring.py  data.py  draw_2d.py  draw_3d.py  transforms.py
